# bookmark-api

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: ac28221b2692_initial_schema.py
app/: auth.py  database.py  errors.py  main.py  models.py  schemas.py
app/routers/: auth.py  bookmarks.py
tests/: conftest.py  test_auth.py  test_bookmarks.py  test_contract.py
